--- a/templates/default/gpsd.erb
+++ b/templates/default/gpsd.erb
@@ -1,6 +1,6 @@
 # Chef controlled configuration file
 # Default settings for gpsd.
-START_DAEMON=""<%= node['kismet']['start_daemon'] %>""
+START_DAEMON="<%= node['kismet']['start_daemon'] %>"
 GPSD_OPTIONS="<%= node['kismet']['gpsd_options'] %>"
 DEVICES="<%= node['kismet']['devices'] %>"
 USBAUTO="<%= node['kismet']['usbauto'] %>"
